Move filtration and sorting of Talents to BE (#73)
- Modify JPA Query method for extracting talents from database (find all active talents, that are not connected with the current user's company, and use query parameters accordingly)
- Modify getAllTalents method in CompanyService interface (change ascending boolean from primitive to reference type and change minRate integer to rate)
- Modify CompanyServiceImpl class to handle the filtering logic correctly and add switch-case construction for the desired sorting
- Modify CompanyController class to use reference data type for ascending parameter and make non-required parameters for the filtering
- Fix CompanyServiceTest class to work correctly with the new logic and cover the getAllTalents method in CompanyServiceImpl.

Co-authored-by: Gyokhan Behchet <61454609+gyokhan28@users.noreply.github.com>